Bug #42465: don't create LDAP connection at import time
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@80504 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (14.0.16-45) unstable; urgency=low
+
+  * Bug #42465: don't create LDAP connection at import time
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 27 Jun 2017 11:26:01 +0200
+
 ucs-school-import (14.0.16-44) unstable; urgency=low
 
   * Bug #42465: UsernameHandler does not increase counter in LDAP with dry_run
