--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,6 +1,12 @@
+ucs-school-import (15.0.0-6) unstable; urgency=low
+
+  * Bug #44838: don't create LDAP connection at import time
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 27 Jun 2017 11:26:01 +0200
+
 ucs-school-import (15.0.0-5) unstable; urgency=low
 
-  * Bug #42465: UsernameHandler does not increase counter in LDAP with dry_run
+  * Bug #44838: UsernameHandler does not increase counter in LDAP with dry_run
     anymore
 
  -- Daniel Troeder <troeder@univention.de>  Thu, 22 Jun 2017 09:33:14 +0200
