Bug #44838: fix typo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@80535 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-7) unstable; urgency=low
+
+  * Bug #44838: fix typo
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 27 Jun 2017 18:35:16 +0200
+
 ucs-school-import (15.0.0-6) unstable; urgency=low
 
   * Bug #44838: don't create LDAP connection at import time
