--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,5 +1,11 @@
 ucs-school-import (14.0.16-45) unstable; urgency=low
 
+  * Bug #42465: fix typo
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 27 Jun 2017 18:35:16 +0200
+
+ucs-school-import (14.0.16-45) unstable; urgency=low
+
   * Bug #42465: don't create LDAP connection at import time
 
  -- Daniel Troeder <troeder@univention.de>  Tue, 27 Jun 2017 11:26:01 +0200
