Bug #44901: fixed syntax error in postrm script
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@80629 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-radius-802.1x (6.0.0-2) unstable; urgency=low
+
+  * Bug #44901: fixed syntax error in postrm script
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 29 Jun 2017 16:04:02 +0200
+
 ucs-school-radius-802.1x (6.0.0-1) unstable; urgency=low
 
   * Bug #43570: version bump for UCS@school 4.2
