--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-radius-802.1x (5.0.0-2) unstable; urgency=low
+
+  * Bug #44900: fixed syntax error in postrm script
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 29 Jun 2017 16:06:17 +0200
+
 ucs-school-radius-802.1x (5.0.0-1) unstable; urgency=medium
 
   * Bug #39534: Start UCS@school 4.1 development
