Bug #44603: add handling of kerberos principals
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@80751 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-radius-802.1x (5.0.1-1) unstable; urgency=low
+
+  * Bug #44603: add handling of kerberos principals
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 30 Jun 2017 17:16:15 +0200
+
 ucs-school-radius-802.1x (5.0.0-2) unstable; urgency=low
 
   * Bug #44900: fixed syntax error in postrm script
