--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -2,6 +2,7 @@ ucs-school-radius-802.1x (5.0.1-1) unstable; urgency=low
 
   * Bug #44603: add handling of kerberos principals
   * Bug #44916: support different types of stationIds
+  * Bug #44918: add some basic logging for debugging purposes
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 30 Jun 2017 17:16:15 +0200
 
