--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -2,7 +2,8 @@ ucs-school-radius-802.1x (5.0.1-1) unstable; urgency=low
 
   * Bug #44603: add handling of kerberos principals
   * Bug #44916: support different types of stationIds
-  * Bug #44918: add some basic logging for debugging purposes
+  * Bug #44918: add some basic logging in the NTLM auth helper
+    and add new UCR variable freeradius/conf/auth-type/mschap/debugfn
   * Bug #43421: added new UCR variables
     freeradius/conf/auth-type/ttls/copy_request_to_tunnel and
     freeradius/conf/auth-type/peap/copy_request_to_tunnel
