Bug #44838: adapt test to code changes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81125 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-22) unstable; urgency=low
+
+  * Bug #44838: adapt test to code changes
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 13 Jul 2017 10:15:09 +0200
+
 ucs-test-ucsschool (4.0.4-21) unstable; urgency=medium
 
   * Bug #44370: add test case 219_import_users_umlauts
