Bug #44993: add support for COUNTER variables in email address schemes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81195 1b283449-9f2f-0410-b571-8eb228e1a901

(cherry picked from commit 4deba0d)

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (14.0.16-47) unstable; urgency=low
+
+  * Bug #44993: add support for COUNTER variables in email address schemes
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 17 Jul 2017 09:57:06 +0200
+
 ucs-school-import (14.0.16-46) unstable; urgency=low
 
   * Bug #42465: fix typo
