--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-64) unstable; urgency=low
+
+  * Bug #44993: adapt test to API change
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 17 Jul 2017 09:56:15 +0200
+
 ucs-test-ucsschool (3.0.17-63) unstable; urgency=low
 
   * Bug #44993: fix logging (merged from 4.2)
