--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-23) unstable; urgency=low
+
+  * Bug #44993: adapt test to API change
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 17 Jul 2017 09:56:15 +0200
+
 ucs-test-ucsschool (4.0.4-22) unstable; urgency=low
 
   * Bug #44838: adapt test to code changes
