Bug #41344: fix deprecated samba-tool user add
create_and_run_process(['samba-tool', 'user', 'add', 'ucs_test_school_user_7dusoif0', 'Foo1nm9zcwzwy4', '--username=Administrator', '--password=univention'], shell=False)
("The 'samba-tool' produced the following output to STDOUT:", 'Note: samba-tool user add is deprecated.  Please use samba-tool user create for the same function.')

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81238 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-24) unstable; urgency=medium
+
+  * Bug #41344: fix deprecated samba-tool user add
+
+ -- Florian Best <best@univention.de>  Wed, 19 Jul 2017 10:15:24 +0200
+
 ucs-test-ucsschool (4.0.4-23) unstable; urgency=low
 
   * Bug #44993: adapt test to API change
