Bug #44993: fix tests
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81309 1b283449-9f2f-0410-b571-8eb228e1a901

(cherry picked from commit 6191cb6)

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-65) unstable; urgency=medium
+
+  * Bug #44993: fix tests
+
+ -- Florian Best <best@univention.de>  Wed, 19 Jul 2017 10:15:24 +0200
+
 ucs-test-ucsschool (3.0.17-64) unstable; urgency=low
 
   * Bug #44993: adapt test to API change
