Bug #44993: fix tests
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81309 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-25) unstable; urgency=low
+
+  * Bug #44993: fix tests
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 21 Jul 2017 14:57:08 +0200
+
 ucs-test-ucsschool (4.0.4-24) unstable; urgency=medium
 
   * Bug #41344: fix deprecated samba-tool user add
