Bug #44667: replace PNG image with SVG
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81311 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (10.0.2-3) unstable; urgency=medium
+
+  * Bug #44667: replace PNG image with SVG
+
+ -- Florian Best <best@univention.de>  Fri, 21 Jul 2017 16:10:21 +0200
+
 ucs-school-metapackage (10.0.2-2) unstable; urgency=low
 
   * Bug #43579: install portal_entry on multi-master too
