Bug #45024: add RESTful HTTP-API for user import (WIP)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81381 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-9) unstable; urgency=low
+
+  * Bug #45024: add RESTful HTTP-API for user import (WIP)
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 20 Jul 2017 02:22:03 +0200
+
 ucs-school-import (15.0.0-8) unstable; urgency=low
 
   * Bug #44993: add support for COUNTER variables in email address schemes
