--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-10) unstable; urgency=low
+
+  * Bug #45024: allow connecting from FQDN
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 26 Jul 2017 18:32:09 +0200
+
 ucs-school-import (15.0.0-9) unstable; urgency=low
 
   * Bug #45024: add RESTful HTTP-API for user import (WIP)
