Bug #45022: add Python client library
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81417 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-11) unstable; urgency=low
+
+  * Bug #45022: add Python client library
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 26 Jul 2017 18:33:35 +0200
+
 ucs-school-import (15.0.0-10) unstable; urgency=low
 
   * Bug #45024: allow connecting from FQDN
