--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-radius-802.1x (5.0.1-3) unstable; urgency=low
+
+  * Bug #44918: fixed wrong argument in UCR template
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 31 Jul 2017 12:50:08 +0200
+
 ucs-school-radius-802.1x (5.0.1-2) unstable; urgency=low
 
   * Bug #44918: ucs-school-ntlm-auth
