Bug #45024: add support for user type * make user_role choices match ucsschool-lib type names * fix logging in celery task * handle non-existent artifacts * add 'id' property to UserImportJob resource
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81577 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,13 @@
+ucs-school-import (15.0.0-16) unstable; urgency=low
+
+  * Bug #45024: add support for user type
+  * make user_role choices match ucsschool-lib type names
+  * fix logging in celery task
+  * handle non-existent artifacts
+  * add 'id' property to UserImportJob resource
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 01 Aug 2017 11:18:45 +0200
+
 ucs-school-import (15.0.0-15) unstable; urgency=low
 
   * Bug #45024: add endpoints for logfile, password and summary subresources
