--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -5,6 +5,14 @@ ucs-school-import (15.0.0-16) unstable; urgency=low
   * fix logging in celery task
   * handle non-existent artifacts
   * add 'id' property to UserImportJob resource
+  * add 'name' property to School resource
+  * Bug #45022: complete makeover of client API
+  * fix module installation path
+  * handle resources in separate classes
+  * accept ID instead of URL as object identifier
+  * add exception classes for most common errors
+  * add support for user type
+  * make SSL certificate verification optional
 
  -- Daniel Troeder <troeder@univention.de>  Tue, 01 Aug 2017 11:18:45 +0200
 
