--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-17) unstable; urgency=low
+
+  * Bug #45022: lower case resource attributes
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 01 Aug 2017 11:49:25 +0200
+
 ucs-school-import (15.0.0-16) unstable; urgency=low
 
   * Bug #45024: add support for user type
