--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-18) unstable; urgency=low
+
+  * Bug #45024: block installation of Python 3 version of Celery
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 02 Aug 2017 01:31:09 +0200
+
 ucs-school-import (15.0.0-17) unstable; urgency=low
 
   * Bug #45022: lower case resource attributes
