--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (15.0.0-20) unstable; urgency=low
+
+  * Bug #45022: adapt create() to API change
+  * rename get_last() to latest()
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 02 Aug 2017 09:47:49 +0200
+
 ucs-school-import (15.0.0-19) unstable; urgency=low
 
   * Bug #45022: add support for text artifacts
