--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (0.0.0-2) unstable; urgency=medium
+
+  * Bug #45023: Update to API changes
+
+ -- Florian Best <best@univention.de>  Fri, 04 Aug 2017 17:01:59 +0200
+
 ucs-school-umc-import (0.0.0-1) unstable; urgency=medium
 
   * Initial release (Bug #45023)
