--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (0.0.0-3) unstable; urgency=medium
+
+  * Bug #45023: enhancements
+
+ -- Florian Best <best@univention.de>  Fri, 04 Aug 2017 19:00:34 +0200
+
 ucs-school-umc-import (0.0.0-2) unstable; urgency=medium
 
   * Bug #45023: Update to API changes
