--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,14 @@
+ucs-school-import (15.0.0-23) unstable; urgency=low
+
+  * Bug #45024: add support for school/role restrictions
+  * remove unneeded features
+  * remove per job hook support
+  * remove per job configuration file support
+  * reduce models
+  * handle existing super administrator in join script
+
+ -- Daniel Troeder <troeder@univention.de>  Sat, 05 Aug 2017 14:47:36 +0200
+
 ucs-school-import (15.0.0-22) unstable; urgency=low
 
   * Bug #45022: allow parameters for latest()
