Bug #45024: remove bashism
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81806 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-24) unstable; urgency=low
+
+  * Bug #45024: remove bashism
+
+ -- Daniel Troeder <troeder@univention.de>  Sat, 05 Aug 2017 15:05:02 +0200
+
 ucs-school-import (15.0.0-23) unstable; urgency=low
 
   * Bug #45024: add support for school/role restrictions
