--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,13 @@
+ucs-school-import (15.0.0-25) unstable; urgency=low
+
+  * Bug #45024: make school, source_uid and user_role optional in DB
+  * do not allow empty school or user_role
+  * allow empty or only correct when POSTing below school resource URL
+  * use OU specific configuration file
+  * calculate source_uid from school name and user_role
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 07 Aug 2017 13:47:07 +0200
+
 ucs-school-import (15.0.0-24) unstable; urgency=low
 
   * Bug #45024: remove bashism
