Bug #45044: fix FTBFS
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81864 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-28) unstable; urgency=medium
+
+  * Bug #45044: fix FTBFS
+
+ -- Florian Best <best@univention.de>  Mon, 07 Aug 2017 18:01:19 +0200
+
 ucs-school-import (15.0.0-27) unstable; urgency=medium
 
   * Bug #45044: Transform joinscript into bash
