--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-29) unstable; urgency=medium
+
+  * Bug #45044: fix FTBFS
+
+ -- Florian Best <best@univention.de>  Mon, 07 Aug 2017 18:04:11 +0200
+
 ucs-school-import (15.0.0-28) unstable; urgency=medium
 
   * Bug #45044: fix FTBFS
