Bug #45024: check text atrifact access permission, load text artifact content in admin view
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81869 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (15.0.0-30) unstable; urgency=low
+
+  * Bug #45024: check text atrifact access permission
+  * load text artifact content in admin view
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 07 Aug 2017 18:09:32 +0200
+
 ucs-school-import (15.0.0-29) unstable; urgency=medium
 
   * Bug #45044: fix FTBFS
