--- a/ucs-school-umc-import/umc/js/de.po
+++ b/ucs-school-umc-import/umc/js/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ucs-school-umc-import\n"
 "Report-Msgid-Bugs-To: packages@univention.de\n"
-"POT-Creation-Date: \n"
+"POT-Creation-Date: 2017-08-07 18:57+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Univention GmbH <packages@univention.de>\n"
 "Language-Team: Univention GmbH <packages@univention.de>\n"
@@ -12,3 +12,131 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+#: umc/js/schoolimport.js:187
+msgid ""
+"A new import of %(role)s users at school %(school)s has been started. The "
+"import has the ID %(id)s."
+msgstr ""
+
+#: umc/js/schoolimport.js:139
+msgid "An error occurred."
+msgstr "Ein Fehler ist aufgetreten."
+
+#: umc/js/schoolimport.js:125
+msgid "Data examination completed"
+msgstr "Datenprüfung abgeschlossen"
+
+#: umc/js/schoolimport.js:82
+msgid "Import user accounts"
+msgstr "Benutzerimport durchführen"
+
+#: umc/js/schoolimport.js:271
+msgid "Job Id"
+msgstr "Job-ID"
+
+#: umc/js/schoolimport.js:78
+msgid ""
+"List of running and completed user imports. For every completed user import "
+"a summary is provided with every change that was made as well as a list of "
+"passwords for newly created user accounts."
+msgstr "Liste der laufenden und abgeschlossenen Benutzerimporte. Für jeden abgeschlossenen Benutzerimport wird eine Zusammenfassung der tatsächlich durchgeführten Änderungen zum Herunterladen bereitgestellt, sowie eine Liste mit Passwörtern für die neu angelegte Benutzerkonten."
+
+#: umc/js/schoolimport.js:76
+msgid "Overview User Imports"
+msgstr "Übersicht Benutzerimporte"
+
+#: umc/js/schoolimport.js:292
+msgid "Passwords"
+msgstr "Passwörter"
+
+#: umc/js/schoolimport.js:140 umc/js/schoolimport.js:166
+msgid "Please notify the system administrator about this error via email."
+msgstr "Bitte benachrichtigen Sie den Administrator per E-Mail über den Fehler."
+
+#: umc/js/schoolimport.js:108
+msgid ""
+"Please select a file. This will start a validation proccess of the data."
+msgstr "Bitte wählen Sie eine Datei aus. Dies wird den Prüfungsprozess der Daten starten."
+
+#: umc/js/schoolimport.js:104
+msgid ""
+"Please select and upload the data export from the School Information System."
+msgstr "Bitte wählen Sie den Datenexport aus der Schuldatenverwaltung und laden Sie diesen hoch"
+
+#: umc/js/schoolimport.js:83
+msgid "Please select the school and the role of user for the import."
+msgstr "Bitte wählen Sie die Schule und den Benutzertyp für den Import aus."
+
+#: umc/js/schoolimport.js:112
+msgid "Please wait until the examination of the data is complete."
+msgstr "Bitte warten Sie bis die Prüfung der Daten abschlossen ist."
+
+#: umc/js/schoolimport.js:258
+msgid "Reload"
+msgstr "Aktualisieren"
+
+#: umc/js/schoolimport.js:87 umc/js/schoolimport.js:280
+msgid "School"
+msgstr "Schule"
+
+#: umc/js/schoolimport.js:109
+msgid "Select file"
+msgstr "Datei auswählen"
+
+#: umc/js/schoolimport.js:88
+msgid "Select the school where the import should be done."
+msgstr "Wählen Sie die Schule an dem der Import durchgeführt werden soll."
+
+#: umc/js/schoolimport.js:96
+msgid "Select the user role."
+msgstr "Wählen Sie die Benutzerrolle aus."
+
+#: umc/js/schoolimport.js:206
+msgid "Start import"
+msgstr "Import starten"
+
+#: umc/js/schoolimport.js:203 umc/js/schoolimport.js:263
+msgid "Start new user import"
+msgstr "Neuen Benutzerimport durchführen"
+
+#: umc/js/schoolimport.js:274
+msgid "Started at"
+msgstr "Gestartet am"
+
+#: umc/js/schoolimport.js:283
+msgid "Started by"
+msgstr "Durchgeführt von"
+
+#: umc/js/schoolimport.js:289
+msgid "Status"
+msgstr "Status"
+
+#: umc/js/schoolimport.js:300
+msgid "Summary"
+msgstr "Zusammenfassung"
+
+#: umc/js/schoolimport.js:126
+msgid ""
+"The examination of the uploaded data completed successfully. Following, you "
+"see the output of the data import interfrace. Press \"Start Import\" to "
+"proceed with the actual user import."
+msgstr ""
+"Die Prüfung der hochgeladenen Daten wurde erfolgreich abgeschlossen. Im "
+"Folgenden wir die Ausgabe der Schnittstelle zum Datenimport angezeigt. "
+"Klicken Sie auf \"Import starten\", um den Benutzerimport durchzuführen."
+
+#: umc/js/schoolimport.js:134
+msgid "The import was started successfully."
+msgstr ""
+
+#: umc/js/schoolimport.js:103
+msgid "Upload data"
+msgstr "Daten hochladen"
+
+#: umc/js/schoolimport.js:95 umc/js/schoolimport.js:286
+msgid "User role"
+msgstr "Benutzerrolle"
+
+#: umc/js/schoolimport.js:209
+msgid "View finished imports"
+msgstr ""
