Bug #45024: add progress update support
* add progress update support
* add support for changing path of pyhooks
* use localized Administrator account



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81875 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,11 @@
+ucs-school-import (15.0.0-32) unstable; urgency=low
+
+  * Bug #45024: add progress update support
+  * add support for changing path of pyhooks
+  * use localized Administrator account
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 08 Aug 2017 07:25:15 +0200
+
 ucs-school-import (15.0.0-31) unstable; urgency=medium
 
   * Bug #45026: move to other join script
