Bug #45024: add support for changing path of hooks
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@81876 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (10.0.2-4) unstable; urgency=low
+
+  * Bug #45024: add support for changing path of hooks
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 08 Aug 2017 07:34:05 +0200
+
 ucs-school-lib (10.0.2-3) unstable; urgency=low
 
   * Bug #44225: move PyHook code to ucsschool.lib
