--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (10.0.2-7) unstable; urgency=medium
+
+  * Bug #44667: error handling
+
+ -- Florian Best <best@univention.de>  Tue, 08 Aug 2017 12:55:16 +0200
+
 ucs-school-metapackage (10.0.2-6) unstable; urgency=medium
 
   * Bug #44667: fix typo
