--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (0.0.0-5) unstable; urgency=medium
+
+  * Bug #45023: Update to API changes
+
+ -- Florian Best <best@univention.de>  Tue, 08 Aug 2017 18:32:28 +0200
+
 ucs-school-umc-import (0.0.0-4) unstable; urgency=medium
 
   * Bug #45023: improve error handling
