--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (0.0.0-6) unstable; urgency=medium
+
+  * Bug #45023: don't display the success page as own page
+
+ -- Florian Best <best@univention.de>  Wed, 09 Aug 2017 19:20:15 +0200
+
 ucs-school-umc-import (0.0.0-5) unstable; urgency=medium
 
   * Bug #45023: Update to API changes
