Bug #45018: fix removing school classes; regression from svn r79380.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@82390 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (9.0.5-4) unstable; urgency=medium
+
+  * Bug #45018: fix removing school classes; regression from svn r79380.
+
+ -- Florian Best <best@univention.de>  Mon, 21 Aug 2017 17:25:20 +0200
+
 ucs-school-umc-wizards (9.0.5-3) unstable; urgency=medium
 
   * Bug #42756: changed sortRepresentation to sortFormatter
