Bug #43421: added new UCR variables for copy_request_to_tunnel New variable names: - freeradius/conf/auth-type/ttls/copy_request_to_tunnel - freeradius/conf/auth-type/peap/copy_request_to_tunnel
    Merged: r80754 from ucs-school-4.1r2/ucs-school-radius-802.1x
    Merged: r81032 from ucs-school-4.1r2/ucs-school-radius-802.1x
    Original comitter: sschwardt

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@82471 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,11 @@
+ucs-school-radius-802.1x (6.0.1-1) unstable; urgency=low
+
+  * Bug #43421: added new UCR variables
+    freeradius/conf/auth-type/ttls/copy_request_to_tunnel and
+    freeradius/conf/auth-type/peap/copy_request_to_tunnel
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 Aug 2017 17:59:49 +0200
+
 ucs-school-radius-802.1x (6.0.0-2) unstable; urgency=low
 
   * Bug #44901: fixed syntax error in postrm script
