Bug #44918: add UCR variable for enabling debugging of NTLM auth helper
    Merged: r81031 from ucs-school-4.1r2/ucs-school-radius-802.1x
    Original comitter: sschwardt

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@82478 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,6 +1,7 @@
 ucs-school-radius-802.1x (6.0.1-1) unstable; urgency=low
 
-  * Bug #44918: add some basic logging for debugging purposes
+  * Bug #44918: add some basic logging in the NTLM auth helper
+    and add new UCR variable freeradius/conf/auth-type/mschap/debugfn
   * Bug #44916: support different types of stationIds
   * Bug #44603: add handling of kerberos principals
   * Bug #43421: added new UCR variables
