Bug #45024: fixed dependencies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@82595 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-34) unstable; urgency=low
+
+  * Bug #45024: fixed dependencies
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 01 Sep 2017 17:42:03 +0200
+
 ucs-school-import (15.0.0-33) unstable; urgency=low
 
   * Bug #45024: UserImportJob.result.result is always dict
