Bug #44993: fix logging
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@82703 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-26) unstable; urgency=low
+
+  * Bug #44993: fix logging
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 06 Sep 2017 10:16:41 +0200
+
 ucs-test-ucsschool (4.0.4-25) unstable; urgency=low
 
   * Bug #44993: fix tests
