Bug #44993: fix logging
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@82703 1b283449-9f2f-0410-b571-8eb228e1a901

Conflicts:
	ucs-test-ucsschool/90_ucsschool/essential/importusers_cli_v2.py
	ucs-test-ucsschool/debian/changelog

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,5 +1,10 @@
-ucs-test-ucsschool (3.0.17-62) unstable; urgency=low
+ucs-test-ucsschool (3.0.17-63) unstable; urgency=low
 
+  * Bug #44993: fix logging (merged from 4.2)
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 08 Sep 2017 09:12:12 +0200
+
+ucs-test-ucsschool (3.0.17-62) unstable; urgency=low
   * Bug #44588: add support for multiple schools to test User
   * check removal of single, primary and secondary schools from User
   * adapt to schoolwizards/users/remove API change
