Bug #44993: add test for unique email addresses
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@82705 1b283449-9f2f-0410-b571-8eb228e1a901

Conflicts:
	ucs-test-ucsschool/90_ucsschool/essential/importusers_cli_v2.py
	ucs-test-ucsschool/debian/changelog

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,6 +1,8 @@
 ucs-test-ucsschool (3.0.17-63) unstable; urgency=low
 
   * Bug #44993: fix logging (merged from 4.2)
+  * refactor common unique object code
+  * add test for unique email addresses
 
  -- Daniel Troeder <troeder@univention.de>  Fri, 08 Sep 2017 09:12:12 +0200
 
