Bug #44993: add test for unique email addresses
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@82705 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,6 +1,8 @@
 ucs-test-ucsschool (4.0.4-26) unstable; urgency=low
 
   * Bug #44993: fix logging
+  * refactor common unique object code
+  * add test for unique email addresses
 
  -- Daniel Troeder <troeder@univention.de>  Wed, 06 Sep 2017 10:16:41 +0200
 
