--- a/ucs-school-radius-802.1x/debian/changelog
+++ b/ucs-school-radius-802.1x/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-radius-802.1x (6.0.1-2) unstable; urgency=low
+
+  * Bug #44918: fixed comparison/detection of max priority group
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 08 Sep 2017 10:09:31 +0200
+
 ucs-school-radius-802.1x (6.0.1-1) unstable; urgency=low
 
   * Bug #44918: add some basic logging in the NTLM auth helper
