--- a/ucs-school-info/debian/changelog
+++ b/ucs-school-info/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-info (7.0.1-1) unstable; urgency=medium
+
+  * Bug #45229: fix ucs-school-info
+
+ -- Florian Best <best@univention.de>  Fri, 08 Sep 2017 13:05:41 +0200
+
 ucs-school-info (7.0.0-1) unstable; urgency=low
 
   * Bug #43570: version bump for UCS@school 4.2
