--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-27) unstable; urgency=low
+
+  * Bug #45229: added very simple test script for ucs-school-info
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 13 Sep 2017 12:52:21 +0200
+
 ucs-test-ucsschool (4.0.4-26) unstable; urgency=low
 
   * Bug #44993: fix logging
