--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,11 @@
+ucs-school-import (15.0.0-41) unstable; urgency=low
+
+  * Bug #45024: don't manage settings file with UCR
+  * add UCRV descriptions
+  * get time zone from system
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 14 Sep 2017 17:03:00 +0200
+
 ucs-school-import (15.0.0-40) unstable; urgency=low
 
   * Bug #45044: use now accessible ObjectClasses instead of hard coded ones
