--- a/ucs-school-s4-branch-site/debian/changelog
+++ b/ucs-school-s4-branch-site/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-s4-branch-site (5.0.0-2) unstable; urgency=medium
+
+  * Bug #43510: fix error handling in listener module
+
+ -- Florian Best <best@univention.de>  Wed, 20 Sep 2017 15:34:52 +0200
+
 ucs-school-s4-branch-site (5.0.0-1) unstable; urgency=low
 
   * Bug #43570: version bump for UCS@school 4.2
