--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-28) unstable; urgency=low
+
+  * Bug #42913: check LDAP bind after deactivating a user in an import
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 26 Sep 2017 15:30:25 +0200
+
 ucs-test-ucsschool (4.0.4-27) unstable; urgency=low
 
   * Bug #45229: added very simple test script for ucs-school-info
